--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
-    "stimulus": "^2.0.0"
+    "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/typography": "^0.4.0",
+    "autoprefixer": "^10.2.4",
+    "postcss": "^8.2.4",
+    "stimulus": "^2.0.0",
+    "tailwindcss": "^2.0.2"
   },
   "version": "0.1.0",
   "devDependencies": {
