--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.4.0",
+    "alpine-turbo-drive-adapter": "^1.0.1",
+    "alpinejs": "^2.8.0",
     "autoprefixer": "^10.2.4",
     "postcss": "^8.2.4",
     "stimulus": "^2.0.0",
