--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "claraphy",
+  "name": "jumpstart",
   "private": true,
   "dependencies": {
     "@hotwired/turbo-rails": "^7.0.0-beta.5",
